Hide system priority notification popups.

When Chrome OS System Tray is open, all notification popups should be
hidden. After it's closed, system priority notifications should be shown
again. The behavior was broken after new MessagePopupCollection and
subsequent fix https://crrev.com/c/1158118 .

TEST=MessagePopupCollectionTest.HighPriorityNotificationShownAgain
BUG=874345

Change-Id: I979adfe1c4632fec356a8ee23ea3544cb1024114
Reviewed-on: https://chromium-review.googlesource.com/1177294
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583921}
Former-commit-id: 3f7d16e600638120ead8a232611dabd4ed0f328b