ui/message_center/views/message_popup_collection_unittest.cc
@@ -917,4 +917,34 @@ TEST_F(MessagePopupCollectionTest, PopupWidgetClosedOutsideDuringFadeOut) {
   EXPECT_FALSE(IsAnimating());
 }
 
+TEST_F(MessagePopupCollectionTest, HighPriorityNotificationShownAgain) {
+  // It only applies to a platform with MessageCenterView i.e. Chrome OS.
+  MessageCenter::Get()->SetHasMessageCenterView(true);
+
+  // Create a notification with system priority.
+  auto notification = CreateNotification("id");
+  notification->SetSystemPriority();
+  MessageCenter::Get()->AddNotification(std::move(notification));
+  AnimateUntilIdle();
+  EXPECT_EQ(1u, GetPopupCounts());
+
+  // The notification with system priority should not be dismissed by
+  // MarkAllPopupsShown.
+  popup_collection()->MarkAllPopupsShown();
+  EXPECT_FALSE(IsAnimating());
+  EXPECT_EQ(1u, GetPopupCounts());
+
+  // The notification should be hidden when MessageCenterView is visible.
+  MessageCenter::Get()->SetVisibility(Visibility::VISIBILITY_MESSAGE_CENTER);
+  EXPECT_TRUE(IsAnimating());
+  AnimateUntilIdle();
+  EXPECT_EQ(0u, GetPopupCounts());
+
+  // The notification should be shown again when MessageCenterView is hidden.
+  MessageCenter::Get()->SetVisibility(Visibility::VISIBILITY_TRANSIENT);
+  EXPECT_TRUE(IsAnimating());
+  AnimateUntilIdle();
+  EXPECT_EQ(1u, GetPopupCounts());
+}
+
 }  // namespace message_center
